# ComputerScienceCourseWork

./: CMakeLists.txt  DataHandler.cpp  DataHandler.hpp  DownloadTab.cpp  DownloadTab.hpp  ExternalProcess.cpp  ExternalProcess.hpp  HttpHandler.cpp  HttpHandler.hpp  LibraryTab.cpp  LibraryTab.hpp  PlayerWindow.cpp  PlayerWindow.hpp  README.md  VideoYoutube.cpp  VideoYoutube.hpp  Window.cpp  Window.hpp  downloadTab.cpp  downloadTab.hpp  window.cpp
docs/: CompuerScience.tex  ComputerScience.tex  doxygenConfig
docs/classPdfs/: nameSorter.py
release/: moc_DataHandler.cpp  moc_DownloadTab.cpp  moc_HttpHandler.cpp  moc_LibraryTab.cpp  moc_PlayerWindow.cpp  moc_VideoYoutube.cpp  moc_Window.cpp  moc_predefs.h
release/Downloads/: database.db
